--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,13 +8,14 @@
         "start": "node dist/index.js"
     },
     "dependencies": {
-        "fastify": "^4.24.3",
         "@fastify/cors": "^8.4.1",
+        "@fastify/static": "^8.3.0",
+        "fastify": "^4.24.3",
         "fastify-plugin": "^4.5.1"
     },
     "devDependencies": {
-        "typescript": "^5.2.2",
         "@types/node": "^20.8.10",
-        "ts-node-dev": "^2.0.0"
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.2.2"
     }
 }
