--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,19 +3,21 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+        "dev": "tsx watch src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js"
     },
     "dependencies": {
-        "@fastify/cors": "^8.4.1",
-        "@fastify/static": "^8.3.0",
+        "@fastify/cors": "^8.5.0",
+        "@fastify/static": "^6.12.0",
+        "dotenv": "^17.2.3",
         "fastify": "^4.24.3",
         "fastify-plugin": "^4.5.1"
     },
     "devDependencies": {
         "@types/node": "^20.8.10",
         "ts-node-dev": "^2.0.0",
+        "tsx": "^4.20.6",
         "typescript": "^5.2.2"
     }
 }
