Update codebase: Sync recent changes in risk-engine, datacube, and web app

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,7 +11,9 @@
         "@fastify/cors": "^8.5.0",
         "@fastify/static": "^6.12.0",
         "@geo-lens/core-geo": "^0.1.0",
-        "@geo-lens/geocube": "^0.1.0",
+        "@geo-lens/datacube": "^0.1.0",
+        "@geo-lens/geocube": "^0.2.0",
+        "@geo-lens/risk-engine": "^0.2.0",
         "@types/pg": "^8.15.6",
         "dotenv": "^17.2.3",
         "fastify": "^4.24.3",
