--- a/packages/geocube/tsconfig.json
+++ b/packages/geocube/tsconfig.json
@@ -2,9 +2,15 @@
     "extends": "../../tsconfig.base.json",
     "compilerOptions": {
         "outDir": "dist",
-        "rootDir": "src"
+        "rootDir": "src",
+        "paths": {
+            "@geo-lens/risk-engine": ["../risk-engine/src"]
+        }
     },
     "include": [
         "src"
+    ],
+    "references": [
+        { "path": "../risk-engine" }
     ]
 }
