--- a/packages/datacube/package.json
+++ b/packages/datacube/package.json
@@ -18,9 +18,11 @@
   "author": "GeoLens Team",
   "license": "MIT",
   "dependencies": {
-    "h3-js": "^4.1.0"
+    "h3-js": "^4.1.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/pg": "^8.15.6",
     "typescript": "^5.6.3"
   }
 }
